test/files/neg/nested-class-shadowing.check
nested-class-shadowing.scala:9: warning: shadowing a nested class of a parent is deprecated but class Status shadows class Status defined in trait Core; rename the class to something else
  class Status extends super.Status
        ^
nested-class-shadowing.scala:13: warning: shadowing a nested class of a parent is deprecated but class Status shadows class Status defined in trait Core; rename the class to something else
  class Status
        ^
nested-class-shadowing.scala:17: warning: shadowing a nested class of a parent is deprecated but class Status shadows class Status defined in trait Core; rename the class to something else
  class Status
        ^
error: No warnings can be incurred under -Werror.
3 warnings
1 error
